--- a/package.json
+++ b/package.json
@@ -5,6 +5,7 @@
   "main": "app.js",
   "type": "module",
   "scripts": {
+    "watch": "npx tailwindcss -i ./src/input.css -o ./public/css/main.css --watch",
     "start": "nodemon app.js",
     "test": "echo \"Error: no test specified\" && exit 1"
   },
@@ -18,12 +19,16 @@
     "ejs": "^3.1.9",
     "express": "^4.18.2",
     "express-jwt": "^8.4.1",
+    "express-session": "^1.17.3",
     "jsonwebtoken": "^9.0.2",
     "morgan": "^1.10.0",
     "multer": "^1.4.5-lts.1",
-    "mysql2": "^3.6.1",
+    "mysql2": "^3.6.2",
     "nodemon": "^3.0.1",
     "prettier": "^3.0.3",
     "request": "^2.88.2"
+  },
+  "devDependencies": {
+    "tailwindcss": "^3.3.3"
   }
 }
