--- a/package.json
+++ b/package.json
@@ -6,6 +6,7 @@
   "type": "module",
   "scripts": {
     "watch": "npx tailwindcss -i ./src/input.css -o ./public/css/main.css --watch",
+    "watch2": "npx tailwindcss -i ./src/menu.css -o ./public/css/menu.css --watch",
     "start": "nodemon app.js",
     "test": "echo \"Error: no test specified\" && exit 1"
   },
