--- a/package.json
+++ b/package.json
@@ -15,6 +15,7 @@
   "license": "ISC",
   "dependencies": {
     "bcrypt": "^5.1.1",
+    "cookie-parser": "^1.4.6",
     "cors": "^2.8.5",
     "dotenv": "^16.3.1",
     "ejs": "^3.1.9",
@@ -27,7 +28,7 @@
     "mysql2": "^3.6.2",
     "nodemon": "^3.0.1",
     "prettier": "^3.0.3",
-    "request": "^2.88.2" 
+    "request": "^2.88.2"
   },
   "devDependencies": {
     "tailwindcss": "^3.3.3"
