--- a/package.json
+++ b/package.json
@@ -26,6 +26,7 @@
     "morgan": "^1.10.0",
     "multer": "^1.4.5-lts.1",
     "mysql2": "^3.6.2",
+    "nodemailer": "^6.9.7",
     "nodemon": "^3.0.1",
     "prettier": "^3.0.3",
     "request": "^2.88.2"
